fixed spacing of component documents

--- a/src/styles/components/breakpoints/index.styl
+++ b/src/styles/components/breakpoints/index.styl
@@ -7,5 +7,8 @@
     transition all .5s ease
 
 
+  .preview-state-variant + .preview-state-variant
+    margin-top .5rem
+
 .preview-breakpoints-item.active .preview-breakpoints-button
   color dropdown-link-active
